# spotlight

./: .gitignore  Cargo.toml  LICENSE  PLAN.md  README.md
.github/workflows/: build-and-release.yml
apps/desktop-ui/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
apps/desktop-ui/src/: App.svelte  styles.css
apps/desktop-ui/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-ui/src-tauri/capabilities/: default.json
apps/desktop-ui/src-tauri/src/: main.rs
configs/: config.toml
crates/core-actions/: Cargo.toml
crates/core-actions/src/: lib.rs
crates/core-indexer/: Cargo.toml
crates/core-indexer/src/: lib.rs
crates/core-search/: Cargo.toml
crates/core-search/src/: lib.rs
crates/shared-types/: Cargo.toml
crates/shared-types/src/: lib.rs
daemon/spotlightd/: Cargo.toml
daemon/spotlightd/src/: main.rs
docs/: IMPLEMENTATION_NOTES.md
screenshots/: Screencast from 2026-04-19 19-27-19.webm
