[workspace]
members = [
  "crates/shared-types",
  "crates/core-search",
  "crates/core-indexer",
  "crates/core-actions",
  "daemon/spotlightd",
  "apps/desktop-ui/src-tauri",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1"
once_cell = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
