[package]
name = "spotlightd"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
core-actions = { path = "../../crates/core-actions" }
core-indexer = { path = "../../crates/core-indexer" }
core-search = { path = "../../crates/core-search" }
shared-types = { path = "../../crates/shared-types" }
tracing.workspace = true
tracing-subscriber.workspace = true
